--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,47 +1,47 @@
-// @font-face {
-// 	font-family: "Cormorant";
-// 	src: url("/fonts/Cormorant-Light.woff2") format("woff2");
-// 	font-weight: 300;
-// 	font-style: normal;
-// 	font-display: swap;
-// }
-
-// @font-face {
-// 	font-family: "Cormorant";
-// 	src: url("/fonts/Cormorant-Regular.woff2") format("woff2");
-// 	font-weight: 400;
-// 	font-style: normal;
-// 	font-display: swap;
-// }
-
-// @font-face {
-// 	font-family: "OpenSans";
-// 	src: url("/fonts/OpenSans-Light.woff2") format("woff2");
-// 	font-weight: 300;
-// 	font-style: normal;
-// 	font-display: swap;
-// }
-
-// @font-face {
-// 	font-family: "OpenSans";
-// 	src: url("/fonts/OpenSans-Light.woff2") format("woff2");
-// 	font-weight: 300;
-// 	font-style: normal;
-// 	font-display: swap;
-// }
-
-// @font-face {
-// 	font-family: "OpenSans";
-// 	src: url("/fonts/OpenSans-Light.woff2") format("woff2");
-// 	font-weight: 300;
-// 	font-style: normal;
-// 	font-display: swap;
-// }
+@font-face {
+	font-family: "Cormorant";
+	src: url("/fonts/Cormorant-Light.woff2") format("woff2");
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
 
 @font-face {
-	font-family: "Ephesis";
-	src: url("/fonts/Ephesis-Regular.woff2") format("woff2");
+	font-family: "Cormorant";
+	src: url("/fonts/Cormorant-Regular.woff2") format("woff2");
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
+
+// @font-face {
+// 	font-family: "OpenSans";
+// 	src: url("/fonts/OpenSans-Light.woff2") format("woff2");
+// 	font-weight: 300;
+// 	font-style: normal;
+// 	font-display: swap;
+// }
+
+// @font-face {
+// 	font-family: "OpenSans";
+// 	src: url("/fonts/OpenSans-Light.woff2") format("woff2");
+// 	font-weight: 300;
+// 	font-style: normal;
+// 	font-display: swap;
+// }
+
+// @font-face {
+// 	font-family: "OpenSans";
+// 	src: url("/fonts/OpenSans-Light.woff2") format("woff2");
+// 	font-weight: 300;
+// 	font-style: normal;
+// 	font-display: swap;
+// }
+
+// @font-face {
+// 	font-family: "Ephesis";
+// 	src: url("/fonts/Ephesis-Regular.woff2") format("woff2");
+// 	font-weight: 400;
+// 	font-style: normal;
+// 	font-display: swap;
+// }
